; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/rtld-elf/aarch64/extr_reloc.c_reloc_tlsdesc_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/rtld-elf/aarch64/extr_reloc.c_reloc_tlsdesc_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tls_data = type { i32, i32, i32 }

@tls_dtv_generation = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @reloc_tlsdesc_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reloc_tlsdesc_alloc(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.tls_data*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = call %struct.tls_data* @xmalloc(i32 12)
  store %struct.tls_data* %6, %struct.tls_data** %5, align 8
  %7 = load i32, i32* @tls_dtv_generation, align 4
  %8 = load %struct.tls_data*, %struct.tls_data** %5, align 8
  %9 = getelementptr inbounds %struct.tls_data, %struct.tls_data* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load %struct.tls_data*, %struct.tls_data** %5, align 8
  %12 = getelementptr inbounds %struct.tls_data, %struct.tls_data* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.tls_data*, %struct.tls_data** %5, align 8
  %15 = getelementptr inbounds %struct.tls_data, %struct.tls_data* %14, i32 0, i32 1
  store i32 %13, i32* %15, align 4
  %16 = load %struct.tls_data*, %struct.tls_data** %5, align 8
  %17 = ptrtoint %struct.tls_data* %16 to i32
  ret i32 %17
}

declare dso_local %struct.tls_data* @xmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
